--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
         material_version = '1.4.0'
         nav_version = '2.3.5'
         room_version = '2.4.1'
+        coroutine_version = '1.6.0'
     }
     repositories {
         google()
